--- a/requirements.txt
+++ b/requirements.txt
@@ -1,29 +1,29 @@
 # Core Libraries
-pandas>=2.0.0
-numpy>=1.24.0
-openpyxl>=3.1.0
-pyyaml>=6.0.0
+pandas>=2.0.0,<2.5
+numpy>=1.24.0,<2.0
+openpyxl>=3.1.0,<4.0
+pyyaml>=6.0.0,<7.0
 
 # Profiling and Analysis
-ydata-profiling>=4.0.0
-pypandoc>=1.10
+ydata-profiling>=4.0.0,<5.0
+pypandoc>=1.10,<2.0
 
 # LLM and AI Integration
-langchain>=0.0.300
-langchain-openai>=0.0.2
-openai>=0.27.0
+langchain>=0.0.300,<1.0
+langchain-openai>=0.0.2,<1.0
+openai>=0.27.0,<1.0
 
 # Web App Interface
-streamlit>=1.20.0
-click>=8.1.0
+streamlit>=1.20.0,<2.0
+click>=8.1.0,<9.0
 
 # Logging
-loguru>=0.7.0
+loguru>=0.7.0,<1.0
 
 # Testing
-pytest>=7.0.0
+pytest>=7.0.0,<8.0
 
 # ML and Matching Tools
-scikit-learn>=1.3.0
-fuzzywuzzy>=0.18.0
-python-Levenshtein>=0.12.0
+scikit-learn>=1.3.0,<2.0
+fuzzywuzzy>=0.18.0,<1.0
+python-Levenshtein>=0.12.0,<1.0
